# mlops-project

./: .gitignore  .pre-commit-config.yaml  FEATURE_ANALYSIS.md  README.md  api.dockerfile  cloudbuild.yaml  create_league_encoding_mapping.py  create_league_mapping.py  data.dvc  example_games_real.json  extract_real_examples.py  frontend.py  league_id_to_encoded.json  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  test_drift_monitoring.py  train.dockerfile  wandb_init.py
.dvc/: config
.github/workflows/: ci.yaml  data_changes.yaml  docker.yaml  model_changes.yaml
configs/: sweep.yaml  train.yaml  train_gcp.yaml  train_gpu.yaml  train_sample.yaml
data/: README.md  raw.dvc
data/frontend/: league_mapping.json
mlops-project/: README.md
models/: best_model.onnx  best_model.pth
models/outdated_models/: best_model_gcp.pth  best_model_old_18features_backup.pth
reports/: README.md  report.py
scripts/: create_balanced_sample.py  create_league_encoding_mapping.py  create_league_mapping.py  deploy_api.py  launch_sweep.py  monitoring_alert_policy.json  run_sweep.bat  run_sweep.py  run_sweeps_venv.ps1  setup_monitoring.py  submit_gcp_gpu.py  submit_gcp_training.py  test_drift_monitoring.py
src/mlops_project/: api.py  data.py  data_drift.py  export_onnx.py  model.py  profile.py  profiling.py  test_torch_compile.py  train.py  train_sweep.py
tests/: locustfile.py  test_api.py  test_data.py  test_model.py
wandb/run-20260118_155830-fd8333od/: run-fd8333od.wandb
wandb/run-20260118_155830-fd8333od/files/: config.yaml  requirements.txt  (+2 more)
